--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/multer": "^2.0.0",
     "@types/node-cron": "^3.0.11",
-    "axios": "^1.11.0",
+    "axios": "^1.12.0",
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "react-day-picker": "^8.10.1",
@@ -109,16 +109,22 @@
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
     "@types/leaflet": "^1.9.12",
-    "@vitejs/plugin-react": "^4.3.2",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.2.1",
-    "drizzle-kit": "^0.30.4",
+    "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
-    "tsx": "^4.19.1",
+    "tsx": "^4.19.3",
     "typescript": "5.6.3",
-    "vite": "^5.4.19"
+    "vite": "^5.4.20"
+  },
+  "overrides": {
+    "@babel/helpers": "^7.26.10",
+    "brace-expansion": "^2.0.2",
+    "on-headers": "^1.0.2"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
