--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
+    "db:migrate": "tsx server/scripts/run-migrations.ts",
     "debug:shipments": "node debug-shipments.js",
     "test:shipment": "node test-shipment-creation.js",
     "fix:database": "node fix-database.js"
@@ -105,7 +106,7 @@
     "@types/express": "4.17.21",
     "@types/express-rate-limit": "^6.0.0",
     "@types/express-session": "^1.18.0",
-    "@types/jsonwebtoken": "^9.0.7",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/leaflet": "^1.9.12",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
