--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "npm run db:init && npm run build:client && npm run build:server",
+    "build:client": "vite build",
+    "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "db:migrate": "tsx server/scripts/run-migrations.ts",
-    "debug:shipments": "node debug-shipments.js",
-    "test:shipment": "node test-shipment-creation.js",
-    "fix:database": "node fix-database.js"
+    "db:init": "INITIALIZE_DB=true tsx server/scripts/run-migrations.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
