--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
+    "lint": "eslint . --ext .ts,.tsx --fix",
+    "lint:check": "eslint . --ext .ts,.tsx",
     "db:push": "drizzle-kit push",
     "db:migrate": "tsx server/scripts/run-migrations.ts",
     "db:init": "INITIALIZE_DB=true tsx server/scripts/run-migrations.ts"
@@ -114,12 +116,15 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
+    "@typescript-eslint/eslint-plugin": "^8.46.1",
+    "@typescript-eslint/parser": "^8.46.1",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.2.1",
     "drizzle-kit": "^0.31.5",
     "esbuild": "^0.25.0",
+    "eslint": "^9.37.0",
     "http-proxy-middleware": "^3.0.5",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
