--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "check": "tsc",
     "lint": "eslint . --ext .ts,.tsx --fix",
     "lint:check": "eslint . --ext .ts,.tsx",
-    "db:push": "drizzle-kit push",
-    "db:migrate": "tsx server/scripts/run-migrations.ts",
-    "db:init": "INITIALIZE_DB=true tsx server/scripts/run-migrations.ts"
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -48,12 +46,10 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
-    "@types/better-sqlite3": "^7.6.13",
     "@types/multer": "^2.0.0",
     "@types/node-cron": "^3.0.11",
     "axios": "^1.12.0",
     "bcrypt": "^5.1.1",
-    "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
