--- a/vercel.json
+++ b/vercel.json
@@ -6,17 +6,13 @@
   "framework": null,
   "outputDirectory": "dist",
   "env": {
-    "NODE_ENV": "production"
-  },
-  "build": {
-    "env": {
-      "DATABASE_URL": "@DATABASE_URL",
-      "SUPABASE_URL": "@SUPABASE_URL",
-      "SUPABASE_ANON_KEY": "@SUPABASE_ANON_KEY",
-      "SUPABASE_SERVICE_ROLE_KEY": "@SUPABASE_SERVICE_ROLE_KEY",
-      "PRINTO_API_BASE_URL": "@PRINTO_API_BASE_URL",
-      "SESSION_SECRET": "@SESSION_SECRET"
-    }
+    "NODE_ENV": "production",
+    "DATABASE_URL": "@DATABASE_URL",
+    "SUPABASE_URL": "@SUPABASE_URL",
+    "SUPABASE_ANON_KEY": "@SUPABASE_ANON_KEY",
+    "SUPABASE_SERVICE_ROLE_KEY": "@SUPABASE_SERVICE_ROLE_KEY",
+    "PRINTO_API_BASE_URL": "@PRINTO_API_BASE_URL",
+    "SESSION_SECRET": "@SESSION_SECRET"
   },
   "routes": [
     {
