--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/leaflet": "^1.9.12",
-    "@types/node": "20.16.11",
+    "@types/node": "^22.12.0",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
