--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": null,
-  "outputDirectory": "dist",
+  "outputDirectory": "dist/public",
   "functions": {
     "api/index.js": {
       "memory": 1024,
