--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
-    "build:server": "esbuild server/vercel.ts --platform=node --packages=external --bundle --format=esm --outdir=api --out-extension:.js=.js",
+    "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production tsx server/production.ts",
     "check": "tsc",
     "lint": "eslint . --ext .ts,.tsx --fix",
