--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
     "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production tsx server/production.ts",
+    "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "lint": "eslint . --ext .ts,.tsx --fix",
     "lint:check": "eslint . --ext .ts,.tsx",
@@ -113,7 +113,7 @@
     "@types/ws": "^8.5.13",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.2.1",
@@ -125,7 +125,7 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.3",
     "typescript": "5.6.3",
-    "vite": "^4.5.3"
+    "vite": "^7.1.10"
   },
   "overrides": {
     "@babel/helpers": "^7.26.10",
@@ -133,11 +133,6 @@
     "on-headers": "^1.0.2"
   },
   "optionalDependencies": {
-    "bufferutil": "^4.0.8",
-    "@rollup/rollup-linux-x64-gnu": "^3.29.4",
-    "@rollup/rollup-linux-x64-musl": "^3.29.4",
-    "@rollup/rollup-darwin-x64": "^3.29.4",
-    "@rollup/rollup-darwin-arm64": "^3.29.4",
-    "@rollup/rollup-win32-x64-msvc": "^3.29.4"
+    "bufferutil": "^4.0.8"
   }
 }
