--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
+    "@supabase/supabase-js": "^2.47.10",
     "@types/multer": "^2.0.0",
     "@types/node-cron": "^3.0.11",
     "axios": "^1.12.0",
