--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "noEmit": true,
     "module": "ESNext",
     "strict": true,
+    "ignoreDeprecations": "5.0",
     "lib": [
       "esnext",
       "dom",
