--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "rest-express",
   "version": "1.0.0",
+  "description": "A full-stack logistics and shipment tracking application with real-time GPS tracking, route optimization, and comprehensive delivery management",
+  "author": "Your Name <your.email@example.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/rest-express.git"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
+    "dev": "NODE_ENV=development tsx watch server/index.ts",
     "build": "npm run db:init && npm run build:client && npm run build:server",
     "build:client": "vite build",
     "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
@@ -48,9 +58,6 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
-    "@types/better-sqlite3": "^7.6.13",
-    "@types/multer": "^2.0.0",
-    "@types/node-cron": "^3.0.11",
     "axios": "^1.12.0",
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.2.0",
@@ -103,6 +110,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.18",
     "@types/bcrypt": "^5.0.2",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/cors": "^2.8.19",
     "@types/express": "4.17.21",
@@ -110,7 +118,9 @@
     "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/leaflet": "^1.9.12",
+    "@types/multer": "^2.0.0",
     "@types/node": "20.16.11",
+    "@types/node-cron": "^3.0.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
