--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "include": [
     "client/src/**/*",
     "shared/**/*",
-    "server/**/*"
+    "server/**/*",
+    "vite.config.ts",
+    "tailwind.config.ts",
+    "drizzle.config.ts"
   ],
   "exclude": [
     "node_modules",
