--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/leaflet": "^1.9.12",
     "@types/multer": "^2.0.0",
-    "@types/node": "20.16.11",
+    "@types/node": "^20.19.30",
     "@types/node-cron": "^3.0.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
