--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,46 @@
+# Dependencies
 node_modules
-dist
-.DS_Store
-server/public
-vite.config.ts.*
+.pnp
+.pnp.js
+
+# Testing
+coverage/
+.nyc_output/
+playwright-report/
+test-results/
+
+# Production
+dist/
+build/
 *.tar.gz
 
-# Environment files
+# Misc
+.DS_Store
 .env
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# Logs
-*.log
-logs/
-
-# IDE files
-.vscode/
+# IDEs
 .idea/
+.vscode/
+*.swp
+*.swo
 
-# Coverage reports
-coverage/
+# Project Specific
+server/public
+uploads/*
+!uploads/.gitkeep
+data/*.db
+*.sqlite
+*.sqlite3
+*.db-journal
+
+# Vite
+vite.config.ts.timestamp-*
+vite.config.ts.*
