--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,11 @@ services:
       - .:/app
       - /app/node_modules
       - ./uploads:/app/uploads
+    env_file:
+      - .env
     environment:
-      - NODE_ENV=development
-      - DEPLOYMENT_ENV=localhost
+      - NODE_ENV=${NODE_ENV:-development}
+      - DEPLOYMENT_ENV=${DEPLOYMENT_ENV:-localhost}
       - PORT=5000
       - DATABASE_URL=postgres://postgres:password@postgres:5432/riderpro
       - BACKUP_DATABASE_URL=postgres://postgres:password@postgres_backup:5432/riderpro_backup
@@ -23,8 +25,8 @@ services:
         condition: service_healthy
       postgres_backup:
         condition: service_healthy
-    restart: unless-stopped
-    command: npm run dev:local
+    restart: always
+    command: /bin/sh docker-entrypoint.sh
 
   postgres:
     image: postgres:15-alpine
