--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - NODE_ENV=${NODE_ENV:-development}
       - DEPLOYMENT_ENV=${DEPLOYMENT_ENV:-localhost}
       - PORT=5000
+      - ENABLE_CONSOLE_LOGS=true
       - DATABASE_URL=postgres://postgres:password@postgres:5432/riderpro
       - BACKUP_DATABASE_URL=postgres://postgres:password@postgres_backup:5432/riderpro_backup
       - CHOKIDAR_USEPOLLING=true
