--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "dev": "docker compose up --build",
     "dev:local": "NODE_ENV=development tsx watch server/index.ts",
-    "build": "npm run db:init && npm run build:client && npm run build:server",
+    "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
     "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node -r dotenv/config dist/index.js",
