build(docker): use env vars for database URLs and update .env.example
Update docker-compose.yml to use environment variables for DATABASE_URL and BACKUP_DATABASE_URL instead of hardcoded values. Modify database connection logic to handle SSL mode detection from connection strings. Update .env.example with new database URLs including sslmode=disable parameter and add missing configuration variables.

--- a/.env.example
+++ b/.env.example
@@ -5,23 +5,21 @@ HOST=0.0.0.0
 BASE_URL=http://localhost:5000
 LOG_LEVEL=info
 
-# --- Supabase / Postgres ---
-DATABASE_URL=postgres://postgres:password@localhost:5432/riderpro
-# SUPABASE_URL=https://your-project.supabase.co
-# SUPABASE_ANON_KEY=your-anon-key
-# SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+# --- Postgres ---
+DATABASE_URL=postgres://postgres:password@postgres:5432/riderpro?sslmode=disable
+BACKUP_DATABASE_URL=postgres://postgres:password@postgres_backup:5432/riderpro_backup?sslmode=disable
 
 # --- API Keys & Secrets ---
 PIA_API_KEY=your-pia-api-key
-SESSION_SECRET=your-session-secret-at-least-32-chars
+SESSION_SECRET=your-session-secret-key-at-least-32-chars
 POPS_JWT_SECRET=your-pops-jwt-secret
-JWT_SECRET=your-jwt-secret-change-in-production
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
 JWT_EXPIRES_IN=24h
 BCRYPT_ROUNDS=10
 
 # --- Security & CORS ---
-CORS_ORIGINS=http://localhost:5173,http://localhost:5000
-ALLOWED_ORIGINS=http://localhost:5173,http://localhost:5000
+CORS_ORIGINS=http://localhost:5173,http://localhost:5000,http://127.0.0.1:5173,http://127.0.0.1:5000,http://localhost:3000
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:5000,http://127.0.0.1:5173,http://127.0.0.1:5000
 ENABLE_CORS=true
 RATE_LIMIT_WINDOW=15
 RATE_LIMIT_MAX=100
@@ -33,7 +31,7 @@ AUDIT_LOG_RETENTION=90
 # --- External APIs ---
 PRINTO_API_BASE_URL=https://pia.printo.in/api/v1
 
-# --- Database (SQLite Local) ---
+# --- Database (SQLite Local - Deprecated but kept for reference) ---
 DATABASE_PATH=./data/riderpro.db
 DB_BACKUP_ENABLED=false
 DB_BACKUP_INTERVAL=24
@@ -98,3 +96,8 @@ DATABASE_SIZE_THRESHOLD=1000
 # --- File Upload ---
 MAX_FILE_SIZE=10
 ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif
+UPLOAD_DIR=./uploads
+
+# --- Debug ---
+DEBUG=false
+VERBOSE_LOGGING=false
