--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
       - DEPLOYMENT_ENV=${DEPLOYMENT_ENV:-localhost}
       - PORT=5000
       - ENABLE_CONSOLE_LOGS=true
-      - DATABASE_URL=postgres://postgres:password@postgres:5432/riderpro
-      - BACKUP_DATABASE_URL=postgres://postgres:password@postgres_backup:5432/riderpro_backup
+      - DATABASE_URL=${DATABASE_URL}
+      - BACKUP_DATABASE_URL=${BACKUP_DATABASE_URL}
       - CHOKIDAR_USEPOLLING=true
       - WATCHPACK_POLLING=true
     depends_on:
