--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
         condition: service_healthy
     restart: always
     command: /bin/sh docker-entrypoint.sh
+    # command: sh -c "npm run build && npm start"
 
   postgres:
     image: postgres:15-alpine
