--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        - VITE_ENABLE_CONSOLE_LOGS=true
+        - VITE_LOG_LEVEL=INFO
     container_name: riderpro-app
     ports:
       - "5000:5000"
@@ -15,6 +18,7 @@ services:
       - DEPLOYMENT_ENV=${DEPLOYMENT_ENV:-localhost}
       - PORT=5000
       - ENABLE_CONSOLE_LOGS=true
+      - LOG_LEVEL=INFO
       - DATABASE_URL=${DATABASE_URL}
       - BACKUP_DATABASE_URL=${BACKUP_DATABASE_URL}
       - CHOKIDAR_USEPOLLING=true
