--- a/package.json
+++ b/package.json
@@ -100,14 +100,14 @@
     "sharp": "^0.34.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.3",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
     "vite-plugin-pwa": "^1.2.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
-    "zod-validation-error": "^3.4.0",
-    "tsx": "^4.19.3"
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
