feat(auth): add cookie-based authentication support
Add helper methods to set and clear authentication cookies for better
server-side state management. Cookies are set during login and token
refresh, and cleared during logout. This enables server-side components
to access authentication state without relying solely on localStorage.

Also update .gitignore to exclude local development files and runtime
storage directories.

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,24 @@ data/*.db
 # Vite
 vite.config.ts.timestamp-*
 vite.config.ts.*
+
+# Docker Compose Override (Local Development)
+docker-compose.override.yml
+node_modules
+
+# Databases (NEVER commit)
+data/
+*.db
+*.db-journal
+*.sqlite
+*.sqlite3
+
+# Postgres volumes
+postgres_data/
+postgres_backup_data/
+
+# Runtime storage
+uploads/
+server/storage/
+!uploads/.gitkeep
+
