feat(deployment): introduce production-ready Docker setup and deployment script
- Add `deploy.sh` script for automated frontend deployment, including backup and service management.
- Create `docker-compose.prod.yml` for production environment, defining services for Django and frontend.
- Update existing `docker-compose.yml` to remove deprecated Node.js backend service and streamline configurations.
- Enhance `.gitignore` to exclude unnecessary files and directories.
- Refactor health check endpoint in Django to ensure minimal response for service checks.
- Remove unused health app and related files to clean up the project structure.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "shared/**/*",
     "scripts/**/*",
     "vite.config.ts",
-    "tailwind.config.ts",
-    "drizzle.config.ts"
+    "tailwind.config.ts"
   ],
   "exclude": [
     "node_modules",
