--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,3 +1,6 @@
+# Production Dockerfile for RiderPro Frontend
+# Builds static files and serves them with a simple HTTP server
+
 # Stage 1: Build
 FROM node:20-slim AS builder
 
@@ -6,29 +9,25 @@ WORKDIR /app
 # Copy package files
 COPY package.json package-lock.json ./
 
-# Install all dependencies (including devDeps for build)
+# Install dependencies (including devDeps for build)
 RUN npm ci
 
 # Copy source code
 COPY . .
 
-# Build the application
-RUN npm run build:client
-RUN npm run build:server
+# Build the application (outputs to dist/public)
+RUN npm run build
 
 # Stage 2: Production
 FROM node:20-slim
 
 WORKDIR /app
 
-# Copy package files
-COPY package.json package-lock.json ./
-
-# Install only production dependencies
-RUN npm ci --only=production
+# Install serve globally to serve static files
+RUN npm install -g serve
 
 # Copy built assets from builder stage
-COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/dist/public ./dist/public
 
 # Create a non-root user for security
 RUN groupadd -r nodejs && useradd -r -g nodejs -s /bin/false nodejs
@@ -37,11 +36,12 @@ RUN chown -R nodejs:nodejs /app
 USER nodejs
 
 # Expose the port
-EXPOSE 5000
+EXPOSE 5004
 
-# Set environment variables (can be overridden at runtime)
+# Set environment variables
 ENV NODE_ENV=production
-ENV PORT=5000
 
-# Start the application
-CMD ["npm", "start"]
+# Start serving static files
+CMD ["serve", "-s", "dist/public", "-l", "5004"]
+
+
