--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,4 @@
 services:
-  # Deprecated: Node.js backend service (moved to deprecated/server/)
-  # Uncomment if you need to run the legacy backend:
-  # app:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #     args:
-  #       - VITE_ENABLE_CONSOLE_LOGS=true
-  #       - VITE_LOG_LEVEL=INFO
-  #   container_name: riderpro-app
-  #   ports:
-  #     - "5000:5000"
-  #   volumes:
-  #     - ./uploads:/app/uploads
-  #   env_file:
-  #     - .env
-  #   environment:
-  #     - NODE_ENV=${NODE_ENV:-development}
-  #     - DEPLOYMENT_ENV=${DEPLOYMENT_ENV:-localhost}
-  #     - PORT=5000
-  #     - ENABLE_CONSOLE_LOGS=true
-  #     - LOG_LEVEL=INFO
-  #     - DATABASE_URL=${DATABASE_URL:-postgres://postgres:password@postgres:5432/riderpro}
-  #     - CHOKIDAR_USEPOLLING=true
-  #     - WATCHPACK_POLLING=true
-  #   depends_on:
-  #     postgres:
-  #       condition: service_healthy
-  #   restart: always
-  #   command: /bin/sh docker-entrypoint.sh
-  #   profiles: ["legacy"]
-
   django:
     build:
       context: ./backend
@@ -40,58 +8,23 @@ services:
       - "8004:8000"
     volumes:
       - ./backend:/app
-      - /app/venv  # Exclude venv from host (everything runs in container)
-      - /app/__pycache__  # Exclude Python cache
       - django_media:/app/media
       - django_static:/app/staticfiles
-    # Django runserver auto-reloads on code changes (HMR enabled by default)
-    env_file:
-      - .env
+    depends_on:
+      postgres:
+        condition: service_healthy
+        required: false
+    restart: unless-stopped
+    stop_grace_period: 5s
+    command: sh -c "./create-db.sh && python manage.py makemigrations && python manage.py migrate --noinput && python manage.py runserver 0.0.0.0:8000"
     environment:
       - DEBUG=True
-      - DB_NAME=riderpro_django
-      - DB_USER=postgres
-      - DB_PASSWORD=password
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - POPS_API_BASE_URL=${POPS_API_BASE_URL:-http://host.docker.internal:8002/api/v1}
-      - SECRET_KEY=${SECRET_KEY:-django-insecure-dev-key-change-in-production}
-      - ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,django,172.21.0.1
-    depends_on:
-      postgres:
-        condition: service_healthy
-      db-restore:
-        condition: service_completed_successfully
-        required: false  # Only wait if db-restore profile is active
-    restart: always
-    # Create database if it doesn't exist, create migrations, run migrations, then start Django dev server with auto-reload (HMR)
-    # Django runserver automatically reloads on code changes when volumes are mounted
-    command: sh -c "./create-db.sh && python manage.py makemigrations && python manage.py migrate --noinput && python manage.py runserver 0.0.0.0:8000"
-
-  db-restore:
-    image: postgres:15-alpine
-    container_name: riderpro-db-restore
-    profiles: ["db-restore"]
-    environment:
-      - PGHOST=postgres
-      - PGUSER=postgres
-      - PGPASSWORD=password
-    volumes:
-      - ./db-dumps:/dumps:ro
-      - ./scripts:/scripts:ro
-    depends_on:
-      postgres:
-        condition: service_healthy
-    entrypoint: ["/bin/sh", "/scripts/restore-db.sh"]
+      - NODE_ENV=development
 
   frontend:
     build:
       context: .
       dockerfile: Dockerfile
-      target: dev
-      args:
-        - VITE_ENABLE_CONSOLE_LOGS=true
-        - VITE_LOG_LEVEL=INFO
     container_name: riderpro-frontend
     ports:
       - "5004:5004"
@@ -100,50 +33,14 @@ services:
       - ./shared:/app/shared
       - ./vite.config.ts:/app/vite.config.ts
       - /app/node_modules
-    # Vite HMR enabled with polling for Docker file watching
-    env_file:
-      - .env
+    depends_on:
+      - django
+    restart: unless-stopped
+    stop_grace_period: 3s
     environment:
       - NODE_ENV=development
-      - VITE_API_BASE_URL=
-      - VITE_POPS_API_BASE_URL=${POPS_API_BASE_URL:-http://localhost:8002/api/v1}
       - CHOKIDAR_USEPOLLING=true
       - WATCHPACK_POLLING=true
-    depends_on:
-      - django
-    restart: always
-
-  nginx:
-    profiles: ["prod"]
-    image: nginx:alpine
-    container_name: riderpro-nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./nginx/certbot/conf:/etc/letsencrypt
-      - ./nginx/certbot/www:/var/www/certbot
-    depends_on:
-      - django
-      - frontend
-    restart: always
-
-  certbot:
-    profiles: ["prod"]
-    image: certbot/certbot
-    container_name: riderpro-certbot
-    volumes:
-      - ./nginx/certbot/conf:/etc/letsencrypt
-      - ./nginx/certbot/www:/var/www/certbot
-    entrypoint: >
-      /bin/sh -c "
-      trap exit TERM;
-      while :; do
-        certbot renew --webroot -w /var/www/certbot;
-        sleep 12h & wait $${!};
-      done;"
-    restart: unless-stopped
 
   postgres:
     image: postgres:15-alpine
@@ -157,9 +54,10 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./backend/init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
-      - ./db-dumps:/dumps:ro  # Read-only access to dumps
-      - ./scripts:/scripts:ro  # Read-only access to scripts
+      - ./db-dumps:/dumps:ro
+      - ./scripts:/scripts:ro
     restart: unless-stopped
+    stop_grace_period: 5s
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
