--- a/package.json
+++ b/package.json
@@ -14,21 +14,13 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "docker compose up --build",
-    "dev:frontend": "vite --host 0.0.0.0 --port 5004",
-    "dev:local": "NODE_ENV=development tsx watch deprecated/server/index.ts",
-    "build": "npm run build:client && npm run build:server",
-    "build:client": "vite build",
-    "build:server": "esbuild deprecated/server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node -r dotenv/config dist/index.js",
+    "dev": "NODE_ENV=development vite --host 0.0.0.0 --port 5004",
+    "build": "NODE_ENV=production vite build",
+    "build:dev": "NODE_ENV=development vite build",
+    "start": "NODE_ENV=production npx serve -s dist/public -l 5004",
     "check": "tsc",
     "lint": "eslint . --ext .ts,.tsx --fix",
-    "lint:check": "eslint . --ext .ts,.tsx",
-    "db:init": "tsx deprecated/server/db/connection.ts",
-    "db:migrate": "tsx deprecated/server/db/migrations.ts up",
-    "db:migrate:down": "tsx deprecated/server/db/migrations.ts down",
-    "db:push": "drizzle-kit push",
-    "db:verify": "tsx scripts/verify-postgres-migration.ts"
+    "lint:check": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -70,9 +62,6 @@
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.39.1",
-    "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.4.1",
@@ -136,7 +125,6 @@
     "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.2.1",
-    "drizzle-kit": "^0.31.8",
     "esbuild": "^0.27.2",
     "eslint": "^9.37.0",
     "http-proxy-middleware": "^3.0.5",
