fix: update project directory references to use consistent casing
- Change all instances of the project directory from "/home/ubuntu/riderpro" to "/home/ubuntu/RiderPro" across deployment scripts and Nginx configuration files for consistency and to prevent potential issues with case sensitivity.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Deploy to server
         run: |
           ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-            cd /home/ubuntu/riderpro || exit 1
+            cd /home/ubuntu/RiderPro || exit 1
             ./deploy.sh
           EOF
