--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,16 +1,16 @@
 # Production Dockerfile for RiderPro Frontend
 # Builds static files and serves them with a simple HTTP server
 
-# Stage 1: Build
-FROM node:20-slim AS builder
+# Stage 1: Build (use Node 24.1.0 to match local environment)
+FROM node:24.1.0-slim AS builder
 
 WORKDIR /app
 
 # Copy package files
 COPY package.json package-lock.json ./
 
-# Install dependencies (including devDeps for build)
-RUN npm ci
+# Install dependencies (including devDeps for build) with matching npm version
+RUN npm install -g npm@11.8.0 && npm ci
 
 # Copy source code
 COPY . .
@@ -18,8 +18,8 @@ COPY . .
 # Build the application (outputs to dist/public)
 RUN npm run build
 
-# Stage 2: Production
-FROM node:20-slim
+# Stage 2: Production runtime (Node 24.1.0)
+FROM node:24.1.0-slim
 
 WORKDIR /app
 
