refactor(deployment): simplify deployment process by running script locally
- Replace SSH setup and remote execution with direct execution of the deployment script on the runner.
- Update workflow to streamline the deployment process and improve efficiency.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,16 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup SSH
+      - name: Run deploy script locally on runner
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
-
-      - name: Deploy to server
-        run: |
-          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-            cd /home/ubuntu/RiderPro || exit 1
-            ./deploy.sh
-          EOF
+          cd /home/ubuntu/RiderPro || exit 1
+          ./deploy.sh
