refactor(authentication): transition from email to username for user authentication
- Update user model to use username as the primary identifier, replacing email references throughout the authentication system.
- Modify forms, serializers, and views to accommodate username-based login, ensuring compatibility with existing functionality.
- Remove email field from user creation and management processes, streamlining user data handling.
- Enhance admin interface and API responses to reflect changes in user identification.
- Update database migrations to align with the new user model structure.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
         required: false
     restart: unless-stopped
     stop_grace_period: 5s
-    command: sh -c "./create-db.sh && python manage.py makemigrations && python manage.py migrate --noinput && python manage.py runserver 0.0.0.0:8000"
+    command: sh -c "python manage.py makemigrations && python manage.py migrate --noinput && python manage.py runserver 0.0.0.0:8000"
     environment:
       - DEBUG=True
       - NODE_ENV=development
