chore(deployment): update Dockerfiles and package configurations for Node 24.1.0
- Update Dockerfile.prod to remove the second stage for production runtime, simplifying the build process.
- Change base image in client Dockerfile to Node 24.1.0-slim for consistency.
- Upgrade package-lock.json to version 3, reflecting updated dependencies and structure.
- Modify package.json to require Node 24.0.0 and npm 11.0.0, aligning with the new environment requirements.

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20-slim
+FROM node:24.1.0-slim
 
 WORKDIR /app
 
@@ -7,7 +7,7 @@ COPY package*.json ./
 COPY client/package*.json ./client/ 2>/dev/null || true
 
 # Install dependencies
-RUN npm ci || npm install
+RUN npm ci
 
 # Copy client source
 COPY client/ ./client/
