--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -18,6 +18,8 @@ COPY . .
 # Build the application (outputs to dist/public)
 RUN npm run build
 
+FROM node:24.1.0-slim
+
 WORKDIR /app
 
 # Install serve globally to serve static files
