--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,16 +5,40 @@ on:
     branches:
       - main
       - master
+  pull_request:
+    branches:
+      - main
+      - master
   workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: self-hosted
+    strategy:
+      fail-fast: false
+      matrix:
+        target: [backend, frontend]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run deploy script locally on runner
+      - name: Run deploy.sh for this target (with label-aware logic)
+        if: |
+          # For non-PR events (push to main/master, workflow_dispatch), always deploy both
+          github.event_name != 'pull_request' ||
+          github.event.action != 'closed' ||
+          github.event.pull_request.merged != true ||
+          (
+            (
+              !(
+                contains(join(github.event.pull_request.labels.*.name, ','), 'frontend') ||
+                contains(join(github.event.pull_request.labels.*.name, ','), 'backend')
+              )
+            )
+            ||
+            contains(join(github.event.pull_request.labels.*.name, ','), matrix.target)
+          )
         run: |
           cd /home/ubuntu/RiderPro || exit 1
-          ./deploy.sh
+          ./deploy.sh ${{ matrix.target }}
