feat(authentication): introduce homebase management and rider assignments
- Add Homebase and RiderHomebaseAssignment models to manage rider locations and assignments.
- Implement serializers and views for homebase CRUD operations and synchronization with POPS.
- Update RiderAccount model to support primary homebase and multiple homebase assignments.
- Enhance registration process to include homebase assignment for riders.
- Modify existing serializers and views to accommodate new fields and relationships.
- Add migrations for new models and fields to ensure database consistency.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,13 @@ on:
 jobs:
   deploy:
     runs-on: self-hosted
+    # On merged PR: run only the job matching the PR label (backend → backend only; frontend → frontend only). On push/manual: run both.
+    if: |
+      github.event_name != 'pull_request' ||
+      github.event.action != 'closed' ||
+      !github.event.pull_request.merged ||
+      !contains(join(github.event.pull_request.labels.*.name, ','), 'frontend') && !contains(join(github.event.pull_request.labels.*.name, ','), 'backend') ||
+      contains(join(github.event.pull_request.labels.*.name, ','), matrix.target)
     strategy:
       fail-fast: false
       matrix:
@@ -23,21 +30,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run deploy.sh for this target (with label-aware logic)
-        if: |
-          github.event_name != 'pull_request' ||
-          github.event.action != 'closed' ||
-          github.event.pull_request.merged != true ||
-          (
-            (
-              !(
-                contains(join(github.event.pull_request.labels.*.name, ','), 'frontend') ||
-                contains(join(github.event.pull_request.labels.*.name, ','), 'backend')
-              )
-            )
-            ||
-            contains(join(github.event.pull_request.labels.*.name, ','), matrix.target)
-          )
+      - name: Deploy ${{ matrix.target }} only
         run: |
           cd /home/ubuntu/RiderPro || exit 1
           ./deploy.sh ${{ matrix.target }}
