--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
-    "zod-validation-error": "^3.4.0"
+    "zod-validation-error": "^3.3.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
@@ -127,6 +127,7 @@
     "concurrently": "^9.2.1",
     "esbuild": "^0.27.2",
     "eslint": "^9.37.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "http-proxy-middleware": "^3.0.5",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
