--- a/package.json
+++ b/package.json
@@ -138,7 +138,17 @@
     "@babel/helpers": "^7.26.10",
     "brace-expansion": "^2.0.2",
     "on-headers": "^1.0.2",
-    "esbuild": "^0.27.2"
+    "esbuild": "^0.27.2",
+    "ajv": "^8.18.0",
+    "@eslint/eslintrc": {
+      "ajv": "^8.18.0"
+    },
+    "eslint": {
+      "ajv": "^8.18.0",
+      "@eslint/eslintrc": {
+        "ajv": "^8.18.0"
+      }
+    }
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
