--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,3 +22,7 @@ ipython>=8.12.0
 # CSV Import/Export
 django-import-export>=4.1.0
 django-json-widget
+
+# API Documentation
+drf-spectacular>=0.26.0
+drf-spectacular-sidecar>=2023.1.1
